--- a/privacy.html
+++ b/privacy.html
@@ -14,7 +14,7 @@
 
 <body>
     <h2>Политика конфиденциальности</h2>
-    <p>баракат кавказ - бесплатное приложение. Данная услуга предоставляется бесплатно и предназначена для использования как есть.</p>
+    <p><b>баракат кавказ</b> - бесплатное приложение. Данная услуга предоставляется бесплатно и предназначена для использования как есть.</p>
     <p>
         Эта страница используется для информирования посетителей о наших правилах в отношении сбора, использования
         и раскрытия личной информации, если кто-либо решил использовать наш сервис.
